--- a/front/bower.json
+++ b/front/bower.json
@@ -9,6 +9,9 @@
     "jquery": "~2.1.1",
     "bootstrap": "~3.1.1",
     "angular-route": "1.4.x",
-    "angular-bootstrap": "~0.13.0"
+    "angular-bootstrap": "~0.13.0",
+    "ng-chartjs": "latest",
+    "Chart.js": "^1.0.2",
+    "angular-chart.js": "^0.8.8"
   }
 }
